PROJECT(GSRV_APP)

INCLUDE_DIRECTORIES("${GSRV_APP_SOURCE_DIR}/third-party/rapidjson/include" 
  "${GSRV_APP_SOURCE_DIR}/third-party/websocketpp" 
  "${GSRV_APP_SOURCE_DIR}/third-party/asio/include")

ADD_DEFINITIONS(-D_WEBSOCKETPP_CPP11_STL_ -D_WEBSOCKETPP_USE_ASIO_)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

FIND_PACKAGE(Threads REQUIRED)
ADD_EXECUTABLE(gsrv main.cpp)
TARGET_LINK_LIBRARIES(gsrv ${CMAKE_THREAD_LIBS_INIT})

